syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserDto) returns (User);
  rpc GetUser(Id) returns (User);
  rpc GetAllUsers(Empty) returns (UserList);
  rpc UpdateUser(UpdateUserDto) returns (User);
  rpc DeleteUser(Id) returns (Empty);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserDto {
  string name = 1;
  string email = 2;
}

message UpdateUserDto {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Id {
  int32 id = 1;
}

message Empty {}

message UserList {
  repeated User users = 1;
}
